<resources>
    <string name="app_name_release" translatable="false">Pokey</string>
    <string name="app_name_debug" translatable="false">Pokey Debug</string>
    <string name="app_name">Pokey</string>
    <string name="title_home">Home</string>
    <string name="title_relays">Relays</string>
    <string name="title_notifications">Notifications</string>
    <string name="pokey_is_running_in_background">Pokey is running in background</string>
    <string name="amber_not_found">Amber not installed</string>
    <string name="relays_connection">Relays connection</string>
    <string name="notifications">Notifications</string>
    <string name="new_mention">New mention</string>
    <string name="new_reply">New reply</string>
    <string name="new_repost">New repost</string>
    <string name="new_quote">New quote</string>
    <string name="new_private">New private message</string>
    <string name="new_reaction">New reaction</string>
    <string name="new_zap">New Zap</string>
    <string name="new_follow">New Follow</string>
    <string name="unknown">Unknown</string>
    <string name="input_npub">Your nPub</string>
    <string name="invalid_npub">Invalid nPub</string>
    <string name="permissions_required">The app requires permissions to work</string>
    <string name="not_started">Pokey has not been started</string>
    <string name="relays">Your relays</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="logo">Logo</string>
    <string name="active_replies">New replies</string>
    <string name="active_reactions">New reactions</string>
    <string name="active_private_messages">New private messages</string>
    <string name="active_zaps">New zaps</string>
    <string name="active_quotes">New quotes</string>
    <string name="active_mentions">New mentions</string>
    <string name="active_reposts">New reposts</string>
</resources>
